--- a/TheGreatGroupModules/Views/Customers/Index.cshtml
+++ b/TheGreatGroupModules/Views/Customers/Index.cshtml
@@ -91,6 +91,16 @@
 
         @section Scripts {
             @Scripts.Render("../Scripts/src/customers_src.js")
+<script type="text/javascript">
+
+    $(function () {
+        SearchCustomer();
+
+    });
+  
+            
+            
+            </script>
         }
 
 
