--- a/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
+++ b/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
@@ -20,7 +20,8 @@
     <link href="../Template/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- This is Sidebar menu CSS -->
     <link href="../Template/plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.css" rel="stylesheet">
-    
+    <!-- Wizard CSS -->
+    <link href="../Template/plugins/bower_components/jquery-wizard-master/css/wizard.css" rel="stylesheet">
     <!-- toast CSS -->
     <link href="../Template/plugins/bower_components/toast-master/css/jquery.toast.css" rel="stylesheet">
     <!-- morris CSS -->
@@ -265,6 +266,13 @@
                             <li> <a href="javascript:void(0)"><i class="fa fa-map-marker" ></i><span class="hide-menu"> ระบบติดตามพนักงาน</span></a> </li>
                         </ul>
                     </li>
+                    <li>
+                        <a href="javascript:void(0)" class="waves-effect"><i class="fa fa-user"></i><span class="hide-menu">  ตั้งค่าระบบ<span class="fa arrow"></span></span></a>
+                        <ul class="nav nav-second-level">
+                            <li> <a href="javascript:void(0)"><i class="fa fa-list-alt"></i><span class="hide-menu"> จัดการข้อมูลสินค้า</span></a> </li>
+                            <li> <a href="javascript:void(0)"><i class="fa fa-map-marker"></i><span class="hide-menu"> ระบบติดตามพนักงาน</span></a> </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -302,6 +310,13 @@
     <!-- Sparkline chart JavaScript -->
     <script src="../Template/plugins/bower_components/jquery-sparkline/jquery.sparkline.min.js"></script>
 
+    <!-- Form Wizard JavaScript -->
+    <script src="../Template/plugins/bower_components/jquery-wizard-master/dist/jquery-wizard.min.js"></script>
+    <!-- FormValidation -->
+    <link rel="stylesheet" href="../Template/plugins/bower_components/jquery-wizard-master/libs/formvalidation/formValidation.min.css">
+    <!-- FormValidation plugin and the class supports validating Bootstrap form -->
+    <script src="../Template/plugins/bower_components/jquery-wizard-master/libs/formvalidation/formValidation.min.js"></script>
+    <script src="../Template/plugins/bower_components/jquery-wizard-master/libs/formvalidation/bootstrap.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="../Template/js/custom.min.js"></script>
     <script src="../Template/js/dashboard1.js"></script>
