--- a/TheGreatGroupModules/Views/Customers/PurchaseOrder.cshtml
+++ b/TheGreatGroupModules/Views/Customers/PurchaseOrder.cshtml
@@ -13,73 +13,142 @@
         </ol>
     </div>
     <!-- /.page title -->
-
+    <a href="javascript:history.back();" class="btn btn-default pull-right m-l-20 hidden-xs hidden-sm waves-effect waves-light"><i class="fa fa-mail-reply"></i> ย้อนกลับ</a>
 </div>
 <div class="row">
+    
     <div class="col-lg-12 ">
 
         <div class="white-box">
 
             <h3 class="m-b-0 m-t-0"> <i class="fa  fa-shopping-cart"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
             <hr>
-
-            <form class="form-horizontal">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-3 control-label">ชื่อ</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="CustomerFirstName" placeholder="ชื่อ">
-                            </div>
-                        </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="pull-left">
+                        <address>
+                            <h4> &nbsp;<b>ชื่อลูกค้า : นางวิไล สุดงาม</b></h4>
+                            <p class="text-muted m-l-5">
+                                สำนักงาน : 555/171 หมู่ที่ 1 ตำบลบางแก้ว อำเภอเมืองสมุทรสงคราม จังหวัดสมุทรสงคราม
+                                <br /> เลขผู้เสียภาษีอากร : 0 7555 6000 0349
+                            </p>
+                        </address>
                     </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-3 control-label">นามสกุล</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="CustomerLastName" placeholder="นามสกุล">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-3 control-label">เบอร์โทร</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="CustomerMobile" placeholder="เบอร์โทร">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="inputPassword3" class="col-sm-3 control-label">รหัสประจำตัวประชาชน</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="CustomerIdCard" placeholder="รหัสประจำตัวประชาชน">
-                            </div>
-                        </div>
+                    <div class="pull-right text-right">
+                        <address>
+                            <p class="m-t-10"><b>วันที่เปิด :</b> <i class="fa fa-calendar"></i> 25 กุมภาพันธ์ 2561</p>                         
+                            @*<p><b>วันที่ครบกำหนด :</b> <i class="fa fa-calendar"></i>  15 พฤษภาคม 2561</p>*@
+                            <p><b> การชำระเงิน :</b>   เงินสด</p>
+                        </address>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <br>
+                    <div class="clearfix"></div>
+                    <form class="form-horizontal">
+                        <div class="row">
+                            
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="inputPassword3" class="col-sm-4 control-label">เลือกสินค้า</label>
+                                    <div class="col-sm-8">
+                                        <select class="form-control select2" id="CustomerProvince">
+                                            <option>เลือก</option>
+                                        </select>
+                                    </div>
 
-                <div class="row">
-
-                    <div class="col-md-7">
-                        <div class="form-group pull-right">
-                            <a href="\Customers/Contract" class="btn btn-info waves-effect waves-light m-r-10" > สั่งซื้อ </a>
-                            <a href="\Customers/Index" class="btn btn-default waves-effect waves-light m-r-10" >ยกเลิก</a>
-
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="form-group">
+                                    <label for="inputEmail3" class="col-sm-3 control-label"> จำนวน </label>
+                                    <div class="col-sm-6">
+                                        <input type="text" class="form-control" id="CustomerMobile" placeholder="" value="20">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <button class="btn btn-success" type="submit"> <i class="fa fa-plus"></i> เพิ่มสินค้า </button>
+                            </div>
                         </div>
-                    </div>
-
-                </div>
-
-            </form>
-
-            
-            <br><br><br><br><br><br><br><br>
-        </div>
-    </div>
+                    </form>
 </div>
+            </div>
+          
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="table-responsive m-t-40" style="clear: both;">
+                        <table class="table table-bordered table-hover">
+                            <thead>
+                                <tr>
+                                    <th class="text-center">#</th>
+                                    <th>รายการสินค้า</th>
+                                    <th class="text-right">จำนวน(หน่วย)</th>
+                                    <th class="text-right">ราคาต่อหน่วย</th>
+                                    <th class="text-right">จำนวนเงิน</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="text-center">1</td>
+                                    <td>ทองรูปพรรณ น้ำหนัก 2 สลึง (7.6 กรัม)</td>
+                                    <td class="text-right"><input type="text" class="form-control text-right" id="CustomerMobile" width="100" placeholder="" value="1"> </td>
+                                    <td class="text-right"> 12,704.00 </td>
+                                    <td class="text-right"> 12,704.00 </td>
+                                </tr>
+                                <tr>
+                                    <td class="text-center"></td>
+                                    <td>ค่ากำเหน็จ</td>
+                                    <td class="text-right"></td>
+                                    <td class="text-right"> 800.00 </td>
+                                    <td class="text-right"> 800.00 </td>
+                                </tr>
+                                <tr>
+                                    <td class="text-center" colspan="3"></td>
+                                    <td class="text-right">รวมเงิน </td>
+                                    <td class="text-right"> 13504.00 </td>
+                                </tr>
+                                <tr>
+                                    <td class="text-center" colspan="3"></td>
+                                    <td class="text-right">ภาษีมูลค่าเพิ่ม (7%) </td>
+                                    <td class="text-right"> 264.85 </td>
+                                </tr>
+                                <tr>
+                                    <td class="text-center" colspan="3"></td>
+                                    <td class="text-right">รวมเงินทั้งสิ้น </td>
+                                    <td class="text-right"> 13,768.85 </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
 
+            </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                   
+                    <hr>
+                    <div class="text-right">
+
+                        <a id="print" class="btn btn-default btn-outline" href="javascript:history.back();"> <span><i class="fa fa-mail-reply"></i> ย้อนกลับ</span> </a>
+                        <a class="btn btn-info" href="\Customers/Contract"> <i class="fa fa-save"></i> บันทึก </a>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+
+    </div>
+
+</div>
+@section Scripts {
+<script>
+    $(function () {
+        $(".select2").select2();
+
+    })
+    </script>
+}
