--- a/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
+++ b/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
@@ -12,7 +12,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="../Sources/Lib/css/dx.common.css" rel="stylesheet" />
-    <link href="../Sources/Lib/css/dx.light.css" rel="stylesheet" />
+    <link href="../Sources/Lib/css/dx.light.compact.css" rel="stylesheet" />
+    <link href="../Content/generic.light.custom.css" rel="stylesheet" />
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="~/Template/plugins/images/favicon.png">
     <title>@ViewBag.Titles</title>
@@ -73,12 +74,14 @@
                     <!-- Logo -->
                     <a class="logo" href="../Home/Index">
                         <!-- Logo icon image, you can use font-icon also --><b>
-                            <!--This is dark logo icon--><img src="~/Template/plugins/images/admin-logo.png" alt="home" class="dark-logo" />
+                            <!--This is dark logo icon--><img src="~/Template/plugins/images/logo1.png" alt="home" class="dark-logo"  width="33px" height="31px"/>
                         <!--This is light logo icon-->
-                        <img src="~/Template/plugins/images/admin-logo-dark.png" alt="home" class="light-logo" />
+                                                                                <img src="~/Template/plugins/images/logo1.png" alt="home" class="light-logo" width="33px" height="31px" />
                         </b>
                         <!-- Logo text image you can use text also --><span class="hidden-xs">
-                            <!--This is dark logo text--><img src="~/Template/plugins/images/admin-text.png" alt="home" class="dark-logo" /><!--This is light logo text--><img src="~/Template/plugins/images/admin-text-dark.png" alt="home" class="light-logo" />
+                            <!--This is dark logo text--><img src="~/Template/plugins/images/admin-text.png" alt="home" class="dark-logo" /><!--This is light logo text-->@*<img src="~/Template/plugins/images/admin-text-dark.png" alt="home" class="light-logo" />*@
+
+                                                                          <img src="~/Template/plugins/images/web_logo_part3.png" width="139px" height="31px" />  
                         </span>
                     </a>
 
@@ -330,8 +333,20 @@
     <script src="../Template/plugins/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script>
     <script src="../Template/plugins/bower_components/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="../Template/plugins/bower_components/multiselect/js/jquery.multi-select.js"></script>
-    
-    
+    <!-- Plugin JavaScript -->
+    <script src="../Template/plugins/bower_components/moment/moment.js"></script>
+    <!-- Clock Plugin JavaScript -->
+    <script src="../Template/plugins/bower_components/clockpicker/dist/jquery-clockpicker.min.js"></script>
+    <!-- Color Picker Plugin JavaScript -->
+    <script src="../Template/plugins/bower_components/jquery-asColorPicker-master/libs/jquery-asColor.js"></script>
+    <script src="../Template/plugins/bower_components/jquery-asColorPicker-master/libs/jquery-asGradient.js"></script>
+    <script src="../Template/plugins/bower_components/jquery-asColorPicker-master/dist/jquery-asColorPicker.min.js"></script>
+    <!-- Date Picker Plugin JavaScript -->
+    <script src="../Template/plugins/bower_components/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+    <!-- Date range Plugin JavaScript -->
+    <script src="../Template/plugins/bower_components/timepicker/bootstrap-timepicker.min.js"></script>
+    <script src="../Template/plugins/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="../Content/datepicker-th.js"></script>
     <script src="../Sources/Lib/js/jszip.min.js"></script>
     <script src="../Sources/Lib/js/dx.all.js"></script>
     @RenderSection("scripts", required: false)
