updated to Dairy Report Form

--- a/TheGreatGroupModules/Report/Report1.rdlc
+++ b/TheGreatGroupModules/Report/Report1.rdlc
@@ -1101,7 +1101,7 @@
       </Border>
     </Style>
   </Body>
-  <Width>8.59772in</Width>
+  <Width>8.23959in</Width>
   <Page>
     <PageHeader>
       <Height>1.38417in</Height>
@@ -1320,7 +1320,7 @@
       </Style>
     </PageHeader>
     <PageFooter>
-      <Height>0.90625in</Height>
+      <Height>1.09375in</Height>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
         <Textbox Name="Textbox65">
@@ -1341,7 +1341,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox62</rd:DefaultName>
-          <Top>0.77305cm</Top>
+          <Top>1.09055cm</Top>
           <Left>13.14975cm</Left>
           <Height>0.52063cm</Height>
           <Width>1.4552cm</Width>
@@ -1369,7 +1369,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox62</rd:DefaultName>
-          <Top>0.3175cm</Top>
+          <Top>0.635cm</Top>
           <Left>13.17621cm</Left>
           <Height>0.49417cm</Height>
           <Width>1.4552cm</Width>
@@ -1398,7 +1398,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox62</rd:DefaultName>
-          <Top>0.87007cm</Top>
+          <Top>1.18757cm</Top>
           <Left>18.6619cm</Left>
           <Height>0.52063cm</Height>
           <Width>1.73749cm</Width>
@@ -1427,7 +1427,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox62</rd:DefaultName>
-          <Top>0.34944cm</Top>
+          <Top>0.66694cm</Top>
           <Left>18.6619cm</Left>
           <Height>0.49417cm</Height>
           <Width>1.73749cm</Width>
@@ -1439,7 +1439,7 @@
           </Style>
         </Textbox>
         <Line Name="Line1">
-          <Top>1.3907cm</Top>
+          <Top>1.7082cm</Top>
           <Left>14.69598cm</Left>
           <Height>0cm</Height>
           <Width>3.84531cm</Width>
@@ -1455,6 +1455,11 @@
         <Border>
           <Style>None</Style>
         </Border>
+        <TopBorder>
+          <Color>Black</Color>
+          <Style>Solid</Style>
+          <Width>1pt</Width>
+        </TopBorder>
       </Style>
     </PageFooter>
     <PageHeight>11.69in</PageHeight>
