--- a/TheGreatGroupModules/Views/Customers/AddCustomer.cshtml
+++ b/TheGreatGroupModules/Views/Customers/AddCustomer.cshtml
@@ -14,16 +14,19 @@
 
 </div>
 <div class="row">
-
+    
     <div class="col-lg-12 ">
-
         <div class="white-box">
-            <form action="Home/Ooepp" id="form-container">
-                <div id="form"></div> 
+
+            <h3 class="m-b-0 m-t-0"> <i class="fa fa-user-plus"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
+            <hr>
+            <div id="loadIndicator"></div>
+            <form action="\Customers/AddCustomers" id="form-container" method="post">
+                <div id="form"></div>
                 <br />
                 <div id="button" class="pull-"></div>
             </form>
-            </div>
+        </div>
         </div>
     </div>
 </div>
@@ -52,367 +55,12 @@
 </style>
 
 @section Scripts {
+@Scripts.Render("../Scripts/src/add_customer.js")
     <script>
 
-        $(function () {
-            var employee = {
-                //"ID": 1,
-                //"FirstName": "",
-                //"LastName": "",
-                //"Position": "",
-                //"BirthDate": "1964/03/16",
-                //"HireDate": "1995/01/15",
-                //"Notes": "John has been in the Audio/Video industry since 1990. He has led DevAV as its CEO since 2003.\r\nWhen not working hard as the CEO, John loves to golf and bowl. He once bowled a perfect game of 300.",
-                //"Address": "351 S Hill St.",
-                //"City": "Los Angeles",
-                //"State": "CA",
-                //"ZipCode": "90013",
-                //"Home": "555-684-1334",
-                //"Mobile": "555-684-1335",
-                //"Email": "jheart@dx-email.com",
-                //"Skype": "jheart_DX_skype",
-            };
-            var title = [
-                 "นาย",
-                  "นาง",
-                  "นางสาว",
-            ];
+      
+           
+     
 
-            var positions = [
-                "HR Manager",
-                "IT Manager",
-                "Controller",
-                "Sales Manager",
-                "Support Manager",
-                "Shipping Manager"
-            ];
-
-            var states = ["AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA", "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD", "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ", "NM", "NY", "NC", "ND", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI", "WY"];
-            $("#form").dxForm({
-                formData: employee,
-                readOnly: false,
-                showColonAfterLabel: true,
-                showValidationSummary: true,
-                validationGroup: "customerData",
-                items: [
-                {
-                    
-                    itemType: "group",
-                    colCount: 3,
-                    items: [{
-                        itemType: "group",
-                        caption: "ข้อมูลลูกค้า",
-                        items: [{
-                            dataField: "CustomerTitleName",
-                            editorType: "dxSelectBox",
-                            editorOptions: {
-                                items: title
-                            },
-                            label: {
-                                text: "คำนำหน้า"
-                            },
-                            isRequired: false
-                        },
-                        {
-                            dataField: "CustomerFirstName",
-                            label: {
-                                text: "ชื่อ"
-                            },
-                            isRequired: true
-                        }, {
-                            dataField: "CustomerLastName",
-
-                            label: {
-                                text: "นามสกุล"
-                            }
-                            , isRequired: true
-                        },
-                        {
-                            dataField: "CustomerNickName",
-                            label: {
-                                text: "ชื่อเล่น"
-                            },
-                            isRequired: true
-                        }, {
-                            dataField: "CustomerIdCard",
-                            label: {
-                                text: "รหัสประจำตัวประชาชน"
-                            }, isRequired: true
-                        },
-                        {
-                            dataField: "CustomerTelephone",
-                            editorOptions: {
-                                mask: "00-000-0000"
-                            },
-                            label: {
-                                text: "เบอร์โทรศัพท์"
-                            },
-                            isRequired: false
-                        },
-                         {
-                             dataField: "CustomerMobile",
-                             label: {
-                                 text: "เบอร์มือถือ"
-                             },
-                             isRequired: true,
-                             editorOptions: {
-                                 mask: "000-000-0000"
-                             }
-
-                         }, {
-                             dataField: "CustomerStatus",
-                             label: {
-                                 text: "สถานภาพ"
-                             }
-                            , isRequired: true
-                         }, {
-                             dataField: "CustomerEmail",
-                             label: {
-                                 text: "อีเมลล์"
-                             }
-                         },
-                      ]
-                    }, {
-                        itemType: "group",
-                        caption: "ที่อยู่ลูกค้า",
-                        items: [
-                            {
-                                dataField: "CustomerAddress1",
-                                label: {
-                                    text: "ที่อยู่ปัจจุบัน"
-                                },
-                                isRequired: true
-                            },
-                            
-                        {
-                            dataField: "CustomerSubDistrictId",
-                            label: {
-                                text: "ตำบล/แขวง"
-                            },
-                            isRequired: true
-                        }, {
-                            dataField: "CustomerDistrictId",
-                            label: {
-                                text: "อำเภอ/เขต"
-                            },
-                            isRequired: true
-                        },
-                          {
-                              dataField: "CustomerProvinceId",
-                              label: {
-                                  text: "จังหวัด"
-                              },
-                              isRequired: true
-                          }, {
-                              dataField: "CustomerZipCode",
-                            label: {
-                                text: "รหัสไปรษณีย์"
-                            }
-                          }, ]
-                    },
-                    {
-                        itemType: "group",
-                        caption: "ข้อมูลที่ทำงาน",
-                        items: [
-                            {
-                                dataField: "CustomerCareer",
-                                label: {
-                                    text: "สถานภาพการทำงาน"
-                                },
-                                isRequired: true
-                            }, {
-                                dataField: "CustomerJob",
-                                label: {
-                                    text: "ลักษณะงาน"
-                                },
-                                isRequired: true
-                            }, {
-                                dataField: "CustomerSalary",
-                                label: {
-                                    text: "รายได้"
-                                },
-                                isRequired: true
-                            }, {
-                                dataField: "CustomerJobYear",
-                                label: {
-                                    text: "จำนวนปีที่ทำงาน"
-                                },
-                                isRequired: true
-                            },
-                            {
-                                dataField: "CustomerJobAddress",
-                                label: {
-                                    text: "สถานที่ทำงาน"
-                                }
-                            },
-
-                        {
-                            dataField: "CustomerJobSubDistrictId",
-                            label: {
-                                text: "ตำบล/แขวง"
-                            }
-                        }, {
-                            dataField: "CustomerJobDistrictId",
-                            label: {
-                                text: "อำเภอ/เขต"
-                            }
-                        },
-                          {
-                              dataField: "CustomerJobProvinceId",
-                              label: {
-                                  text: "จังหวัด"
-                              }
-                          }, {
-                              dataField: "CustomerJobZipCode",
-                              label: {
-                                  text: "รหัสไปรษณีย์"
-                              }
-                          }, ]
-                    }, ]
-                },
-                 {
-                     
-                     itemType: "group",
-                     colCount: 3,
-                     items: [{
-                         itemType: "group",
-                         caption: "ข้อมูลคู่สมรส",
-                         items: [{
-                             dataField: "CustomerSpouseTitle",
-                             editorType: "dxSelectBox",
-                             editorOptions: {
-                                 items: title
-                             },
-                             label: {
-                                 text: "คำนำหน้า"
-                             },
-                             isRequired: false
-                         },
-                        {
-                            dataField: "CustomerSpouseFirstName",
-                            label: {
-                                text: "ชื่อ"
-                            },
-                            isRequired: true
-                        }, {
-                            dataField: "CustomerSpouseLastName",
-
-                            label: {
-                                text: "นามสกุล"
-                            }
-                            , isRequired: true
-                        },
-                        {
-                            dataField: "CustomerSpouseNickName",
-                            label: {
-                                text: "ชื่อเล่น"
-                            },
-                            isRequired: true
-                        }, {
-                            dataField: "CustomerSpouseTelephone",
-                            editorOptions: {
-                                mask: "00-000-0000"
-                            },
-                            label: {
-                                text: "เบอร์โทรศัพท์"
-                            },
-                            isRequired: false
-                        },
-                         {
-                             dataField: "CustomerSpouseMobile",
-                             label: {
-                                 text: "เบอร์มือถือ"
-                             },
-                             isRequired: true,
-                             editorOptions: {
-                                 mask: "000-000-0000"
-                             }
-
-                         }, {
-                             dataField: "CustomerSpouseAddress",
-                             label: {
-                                 text: "ที่อยู่"
-                             }
-                         }, {
-                             dataField: "CustomerSpouseSubDistrictId",
-                             label: {
-                                 text: "ตำบล/แขวง"
-                             }
-                         }, {
-                             dataField: "CustomerSpouseDistrictId",
-                             label: {
-                                 text: "อำเภอ/เขต"
-                             }
-                         }, {
-                             dataField: "CustomerSpouseProvinceId",
-                             label: {
-                                 text: "จังหวัด"
-                             }
-                         }, {
-                             dataField: "CustomerSpouseZipCode",
-                             label: {
-                                 text: "รหัสไปรษณีย์"
-                             }
-                         }, ]
-                     },
-                            {
-                               itemType: "group",
-                               caption: "บุคคลที่ติดต่อได้ในกรณีฉุกเฉิน",
-                               items: [{
-                                   dataField: "Address",
-                                   label: {
-                                       text: "คำนำหน้า"
-                                   }
-                               }, {
-                                   dataField: "City",
-                                   label: {
-                                       text: "ชื่อ"
-                                   }
-                               }, {
-                                   dataField: "City",
-                                   label: {
-                                       text: "นามสกุล"
-                                   }
-                               }, {
-                                   dataField: "City",
-                                   label: {
-                                       text: "ความสัมพันธ์"
-                                   }
-                               }, {
-                                   dataField: "เบอร์โทรศัทพ์",
-                                   editorOptions: {
-                                       mask: "00-000-0000"
-                                   },
-                                   isRequired: false
-                               },
-                          {
-                              dataField: "Mobile",
-                              label: {
-                                  text: "เบอร์มือถือ"
-                              },
-                              isRequired: true,
-                              editorOptions: {
-                                  mask: "000-000-0000"
-                              }
-
-                          }, ]
-                           },
-
-                     ]
-                 },
-               
-               
-                
-
-                ]
-            });
-        });
-
-        $("#button").dxButton({
-            text: "Register",
-            type: "success",
-            useSubmitBehavior: true,
-            validationGroup: "customerData"
-        });
     </script>
 }
